# AIC26---Multimodal-Agentic-Video-Retrieval-System

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
backend/: README.md  __init__.py  validate_frame_map.py
backend/app/api/: retrieval.py  search.py
backend/app/models/: retrieval.py
backend/app/services/indexing/: build_faiss_index.py  build_openclip_index.py  normalize_keyframe_metadata.py  run_keyframe_openclip_pipeline.py  validate_frame_map.py  validate_keyframes.py
backend/app/services/metadata/: __init__.py
backend/app/services/retrieval/: retrieval_manager.py  search_visual.py
backend/tests/: test_search_visual.py
data/: README.md
data/metadata/: metadata_store.py
docs/: README.md  api_contract.md  architecture.md  eval_protocol.md  metadata_schema.md  retrieval_api_contract.md  service_boundaries.md
experiments/: README.md
frontend/: README.md
reports/: bao_cao_retrieval_can_lam_de_chay_duoc.docx  baseline_retrieval_w2.md  build_retrieval_run_report.py
