[project]
name = "hcmc-ai-challenge"
version = "0.1.0"
description = "Multimodal Agentic Video Retrieval System — HCMC AI Challenge 2026"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
